# ollamadiffuser

./: CHANGELOG.md  GGUF_GUIDE.md  PUBLISHING.md  README.md  pyproject.toml  setup.py
examples/: custom_models.json  custom_models.yaml
integrations/openclaw/: SKILL.md
ollamadiffuser/: __init__.py
ollamadiffuser/api/: server.py
ollamadiffuser/cli/: civitai_commands.py  config_commands.py  embedding_commands.py  huggingface_commands.py  lora_commands.py  main.py  model_commands.py  recommend_command.py  registry_commands.py  vae_commands.py
ollamadiffuser/core/config/: model_guide.py  model_registry.py  settings.py
ollamadiffuser/core/inference/: __init__.py  base.py  engine.py
ollamadiffuser/core/inference/strategies/: __init__.py  controlnet_strategy.py  flux_strategy.py  generic_strategy.py  gguf_strategy.py  hidream_strategy.py  mlx_strategy.py  qwen_strategy.py  sd15_strategy.py  sd3_strategy.py  sdxl_strategy.py  video_strategy.py
ollamadiffuser/core/models/: gguf_loader.py  manager.py
ollamadiffuser/core/utils/: civitai_client.py  download_utils.py  embedding_manager.py  hf_client.py  lora_manager.py  vae_manager.py
ollamadiffuser/mcp/: server.py
ollamadiffuser/ui/: web.py
ollamadiffuser/ui/templates/: index.html
tests/: conftest.py  test_api_base64.py  test_api_server.py  test_civitai_client.py  test_engine.py  test_hf_client.py  test_lora_manager.py  test_mcp_server.py  test_mlx_strategy.py  test_model_registry.py  test_mps_support.py  test_progress.py  test_qwen_strategy.py  test_settings.py
