[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamadiffuser"
version = "2.0.15"
authors = [
    {name = "LocalKinAI Team", email = "contact@localkin.ai"}
]
description = "Local AI Image Generation with Ollama-style CLI for Stable Diffusion, FLUX, and LoRA support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Environment :: Web Environment",
]
keywords = [
    "diffusion",
    "image-generation",
    "ai",
    "machine-learning",
    "lora",
    "ollama",
    "stable-diffusion",
    "flux",
    "local-ai",
    "controlnet",
    "web-ui",
    "cli",
    "img2img",
    "inpainting",
    "mcp",
    "openclaw",
]
dependencies = [
    "torch>=2.4.0",
    "diffusers>=0.34.0",
    "transformers>=4.40.0",
    "accelerate>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "huggingface-hub>=0.25.0",
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "python-multipart>=0.0.0",
    "psutil>=5.9.0",
    "jinja2>=3.0.0",
    "peft>=0.17.0",
    "numpy>=1.26.0",
    "controlnet-aux>=0.0.7",
    "opencv-python>=4.8.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gguf = [
    "stable-diffusion-cpp-python>=0.1.0",
    "gguf>=0.1.0",
]
mlx = [
    # Apple Silicon native FLUX-family via MLX. Wheel is mac-arm64 only;
    # pip will refuse to install elsewhere. See issue #7.
    "mflux>=0.17.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
full = [
    "stable-diffusion-cpp-python>=0.1.0",
    "gguf>=0.1.0",
    "mcp[cli]>=1.0.0",
    "mflux>=0.17.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
openclaw = [
    "mcp[cli]>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ollamadiffuser = "ollamadiffuser.__main__:main"
ollamadiffuser-mcp = "ollamadiffuser.mcp.server:main"

[project.urls]
Homepage = "https://www.ollamadiffuser.com/"
Website = "https://www.ollamadiffuser.com/"
Repository = "https://github.com/LocalKinAI/ollamadiffuser"
Issues = "https://github.com/LocalKinAI/ollamadiffuser/issues"
Documentation = "https://www.ollamadiffuser.com/"
"Bug Reports" = "https://github.com/LocalKinAI/ollamadiffuser/issues"
"Feature Requests" = "https://github.com/LocalKinAI/ollamadiffuser/issues"
"Source Code" = "https://github.com/LocalKinAI/ollamadiffuser"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ollamadiffuser*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ollamadiffuser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
